# idun-defaults

./: Idun_c64u_run_first.cfg  PKGBUILD  README.md  bashrc  bashrc_idun  buildpkg.sh  config.install  idunrc.toml  newshell  wifi
ffetch/: Cargo.toml
ffetch/src/: ffetch.rs  lib.rs  main.rs
idunsh/: Cargo.toml
idunsh/src/: c64ultimate.rs  main.rs  util.rs
