[package]
name = "idunsh"
version = "1.2.2"
edition = "2021"
description = "Execute commands remotely in the idun-shell."

[dependencies]
nix = "0.19.1"
failure = "0.1.8"
dirs = "2.0"
clap = { version = "4.4.18", features = ["derive"] }
bstr = "1.10.0"
ureq = { version = "3.1.4", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }

[dependencies.mio]
version = "0.7.7"
features = ["os-poll", "os-util", "tcp"]
